Not using List.of() in test